# Stockverse

./: .replit  Dockerfile  README.md  app.py  backtesting.py  data_handler.py  feature_engineering.py  models.py  pyproject.toml  replit.md  requirements.txt
